cmake_minimum_required(VERSION 3.16)



project(SQLCartoGIS VERSION 0.1 LANGUAGES CXX)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(ScControls)
add_subdirectory(ScDesktop)

# file(REMOVE_RECURSE ${CMAKE_BINARY_DIR}/bin)
# file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

